test-cases/final-dump/higher_order_arity_error.wybe
def a(f:(X, Y), x:X, y:Y) {
    f(x)
}
